<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".StartWindow">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/name"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="390dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="42dp"/>

        <EditText
            android:id="@+id/lastName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/lastName" />

        <EditText
            android:id="@+id/middleName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/middleName" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/firstName" />

        <EditText
            android:id="@+id/age"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/age" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"/>

        <Button
            android:id="@+id/save"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/save" />
    </LinearLayout>

            <LinearLayout

                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pressure"
                    android:layout_width="147dp"
                    android:layout_height="80dp"
                    android:layout_gravity="start"
                    android:hint="@string/pressure" />

                <TextView
                    android:layout_width="34dp"
                    android:layout_height="wrap_content" />

                <Button
                android:id="@+id/vitals"
                    android:layout_width="147dp"
                    android:layout_height="80dp"
                    android:layout_gravity="end"

                android:hint="@string/vitals"/>
        </LinearLayout>
</LinearLayout>
